<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">AguaLife</string>
    <string name="hint_peso">Seu peso(Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular consumo água</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
</resources>