<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/drink_water"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <ImageView
        android:id="@+id/ic_refresh"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:inputType="number"
        android:maxLength="3"
        android:padding="15dp"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/purple_200"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:hint="@string/hint_peso"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:padding="15dp"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/purple_200"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bd_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_gradient"
        android:padding="15dp"
        android:text="@string/text_button_calcular"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/edit_peso" />

    <View
        android:id="@+id/container_resultado"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/result_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bd_calcular" />

    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 ml"
        android:textColor="@color/purple_200"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/container_resultado"
        app:layout_constraintEnd_toEndOf="@id/container_resultado"
        app:layout_constraintStart_toStartOf="@id/container_resultado"
        app:layout_constraintTop_toTopOf="@id/container_resultado"

        />

    <Button
        android:id="@+id/alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_button_alarme"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@id/definir_lembrete"
        app:layout_constraintTop_toBottomOf="@id/txt_resultado_ml" />

    <Button
        android:id="@+id/definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_button_lembrete"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_resultado_ml" />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_hora"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/definir_lembrete" />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_dois_pontos"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        app:layout_constraintTop_toBottomOf="@id/definir_lembrete" />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_minutos"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        app:layout_constraintTop_toBottomOf="@id/definir_lembrete" />


</androidx.constraintlayout.widget.ConstraintLayout>